# danake

./: .firebaserc  .gitignore  Cargo.toml  README.md  firebase.json
.github/workflows/: firebase.yml  main.yml
benches/: danake.rs
docs/: book.toml  state_transitions.monopic
docs/src/: SUMMARY.md  about.md  chapter_1.md  cmz13.md  danake.md  design_goals.md  extensions.md  implementation.md  notation.md  overview.md  performance.md  proof_statements.md  questions.md  related_work.md  state.md  wallet.md
docs/src/cmz13/: intuition.md  issuance.md  keygen.md  macggm.md  notation.md  presentation.md
docs/src/extensions/: affine.md  chain.md  epochs.md  nullifiers.md
docs/src/proof_statements/: epoch_rollover.md  token_purchase.md  wallet_issuance.md
docs/src/state/: epochs.md  token.md  token_spending.md  wallet.md  wallet_token.md  wallet_topup.md
docs/src/theme/: index.hbs
docs/src/token/: keygen.md  rollover.md  spend.md
docs/src/wallet/: issuance.md  keygen.md  purchase.md  rollover.md  topup.md
src/: constants.rs  epoch.rs  lib.rs  tag.rs  transcript.rs  wallet.rs
src/wallet/: issuance.rs  keys.rs  rollover.rs  topup.rs
tests/: danake.rs
