[package]
name = "danake"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_core = "0.5"
zkp = "0.7"
curve25519-dalek = "2"
merlin = "2"
bincode = "1"
serde = { version = "1.0", features = ["derive"] }
bulletproofs = { git = "https://github.com/dalek-cryptography/bulletproofs", branch = "thiserror" }

